--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     height 800px;
     background-image: url('https://img.freepik.com/premium-vector/abstract-digital-background-with-technology-circuit-board-texture-electronic-motherboard-illustration-communication-engineering-concept-vector-illustration_41981-1820.jpg?w=900');
-    background-position: bottom;
+    background-position: bottom 0px;
     background-size: 100%;
 }
 
