--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     background-image: url('https://img.freepik.com/premium-vector/abstract-digital-background-with-technology-circuit-board-texture-electronic-motherboard-illustration-communication-engineering-concept-vector-illustration_41981-1820.jpg?w=900');
     background-position: relative;
     background-size: 100%;
+    background-repeat: no-repeat;
 }
 
 header {
